deleteed img/ from 2 places

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('img/bg3.jpg');
+        background: url('bg3.jpg');
         height: 500px;
         /* You must set a specified height */
         background-position: center;
@@ -133,7 +133,7 @@
         <div class="left">
             <!-- left box for logo -->
 
-            <img src="img/bg.jpg" alt="">
+            <img src="bg.jpg" alt="">
             <div>Shivam Coaching</div>
 
         </div>
